PPL/Lab4/Sample/CompiledFiles/SampleParser.py
# Generated from Sample.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SampleParser ( Parser ):

    grammarFileName = "Sample.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'If'", "'is'", "'then'", "'While'", "'do'", 
                     "'the current time'", "'before'", "'after'", "'equal to'", 
                     "'the'", "'video'", "'audio'", "'Turn'", "'turn'", 
                     "'on'", "'off'", "'Set'", "'set'", "'to'", "'Increase'", 
                     "'Decrease'", "'increase'", "'decrease'", "'by'", "'Play'", 
                     "'play'", "'classroom'", "'kitchen'", "'living room'", 
                     "'bedroom'", "'bathroom'", "'table'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Comparision", "Prepositions", "Integer", 
                      "IDENTIFIER", "Time", "WS" ]

    RULE_program = 0
    RULE_command = 1
    RULE_conditionalCommand = 2
    RULE_ifCondition = 3
    RULE_whileCondition = 4
    RULE_timeAttribute = 5
    RULE_timeComparision = 6
    RULE_elementAttribute = 7
    RULE_objectAttribute = 8
    RULE_mediaType = 9
    RULE_actionSentence = 10
    RULE_turnAction = 11
    RULE_setAction = 12
    RULE_editAction = 13
    RULE_playAction = 14
    RULE_deviceNLocation = 15
    RULE_device = 16
    RULE_location = 17

    ruleNames =  [ "program", "command", "conditionalCommand", "ifCondition", 
                   "whileCondition", "timeAttribute", "timeComparision", 
                   "elementAttribute", "objectAttribute", "mediaType", "actionSentence", 
                   "turnAction", "setAction", "editAction", "playAction", 
                   "deviceNLocation", "device", "location" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    Comparision=33
    Prepositions=34
    Integer=35
    IDENTIFIER=36
    Time=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(SampleParser.CommandContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_program




    def program(self):

        localctx = SampleParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.command()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionalCommand(self):
            return self.getTypedRuleContext(SampleParser.ConditionalCommandContext,0)


        def actionSentence(self):
            return self.getTypedRuleContext(SampleParser.ActionSentenceContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_command




    def command(self):

        localctx = SampleParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SampleParser.T__0, SampleParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.conditionalCommand()
                pass
            elif token in [SampleParser.T__12, SampleParser.T__13, SampleParser.T__16, SampleParser.T__17, SampleParser.T__19, SampleParser.T__20, SampleParser.T__21, SampleParser.T__22, SampleParser.T__24, SampleParser.T__25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.actionSentence()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifCondition(self):
            return self.getTypedRuleContext(SampleParser.IfConditionContext,0)


        def whileCondition(self):
            return self.getTypedRuleContext(SampleParser.WhileConditionContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_conditionalCommand




    def conditionalCommand(self):

        localctx = SampleParser.ConditionalCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conditionalCommand)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SampleParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.ifCondition()
                pass
            elif token in [SampleParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.whileCondition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def timeAttribute(self):
            return self.getTypedRuleContext(SampleParser.TimeAttributeContext,0)


        def timeComparision(self):
            return self.getTypedRuleContext(SampleParser.TimeComparisionContext,0)


        def Time(self):
            return self.getToken(SampleParser.Time, 0)

        def actionSentence(self):
            return self.getTypedRuleContext(SampleParser.ActionSentenceContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_ifCondition




    def ifCondition(self):

        localctx = SampleParser.IfConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(SampleParser.T__0)
            self.state = 47
            self.timeAttribute()
            self.state = 48
            self.match(SampleParser.T__1)
            self.state = 49
            self.timeComparision()
            self.state = 50
            self.match(SampleParser.Time)
            self.state = 51
            self.match(SampleParser.T__2)
            self.state = 52
            self.actionSentence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementAttribute(self):
            return self.getTypedRuleContext(SampleParser.ElementAttributeContext,0)


        def Comparision(self):
            return self.getToken(SampleParser.Comparision, 0)

        def Integer(self):
            return self.getToken(SampleParser.Integer, 0)

        def actionSentence(self):
            return self.getTypedRuleContext(SampleParser.ActionSentenceContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_whileCondition




    def whileCondition(self):

        localctx = SampleParser.WhileConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whileCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SampleParser.T__3)
            self.state = 55
            self.elementAttribute()
            self.state = 56
            self.match(SampleParser.T__1)
            self.state = 57
            self.match(SampleParser.Comparision)
            self.state = 58
            self.match(SampleParser.Integer)
            self.state = 59
            self.match(SampleParser.T__4)
            self.state = 60
            self.actionSentence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_timeAttribute




    def timeAttribute(self):

        localctx = SampleParser.TimeAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_timeAttribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(SampleParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeComparisionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_timeComparision




    def timeComparision(self):

        localctx = SampleParser.TimeComparisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_timeComparision)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__6) | (1 << SampleParser.T__7) | (1 << SampleParser.T__8))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.IDENTIFIER)
            else:
                return self.getToken(SampleParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return SampleParser.RULE_elementAttribute




    def elementAttribute(self):

        localctx = SampleParser.ElementAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elementAttribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__9:
                self.state = 66
                self.match(SampleParser.T__9)


            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.match(SampleParser.IDENTIFIER)
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SampleParser.IDENTIFIER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mediaType(self):
            return self.getTypedRuleContext(SampleParser.MediaTypeContext,0)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.IDENTIFIER)
            else:
                return self.getToken(SampleParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return SampleParser.RULE_objectAttribute




    def objectAttribute(self):

        localctx = SampleParser.ObjectAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_objectAttribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__9:
                self.state = 74
                self.match(SampleParser.T__9)


            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.match(SampleParser.IDENTIFIER)
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SampleParser.IDENTIFIER):
                    break

            self.state = 82
            self.mediaType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MediaTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_mediaType




    def mediaType(self):

        localctx = SampleParser.MediaTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mediaType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__10 or _la==SampleParser.T__11:
                self.state = 84
                _la = self._input.LA(1)
                if not(_la==SampleParser.T__10 or _la==SampleParser.T__11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def turnAction(self):
            return self.getTypedRuleContext(SampleParser.TurnActionContext,0)


        def setAction(self):
            return self.getTypedRuleContext(SampleParser.SetActionContext,0)


        def editAction(self):
            return self.getTypedRuleContext(SampleParser.EditActionContext,0)


        def playAction(self):
            return self.getTypedRuleContext(SampleParser.PlayActionContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_actionSentence




    def actionSentence(self):

        localctx = SampleParser.ActionSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_actionSentence)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SampleParser.T__12, SampleParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.turnAction()
                pass
            elif token in [SampleParser.T__16, SampleParser.T__17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.setAction()
                pass
            elif token in [SampleParser.T__19, SampleParser.T__20, SampleParser.T__21, SampleParser.T__22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.editAction()
                pass
            elif token in [SampleParser.T__24, SampleParser.T__25]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.playAction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TurnActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceNLocation(self):
            return self.getTypedRuleContext(SampleParser.DeviceNLocationContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_turnAction




    def turnAction(self):

        localctx = SampleParser.TurnActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_turnAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not(_la==SampleParser.T__12 or _la==SampleParser.T__13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==SampleParser.T__14 or _la==SampleParser.T__15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.deviceNLocation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementAttribute(self):
            return self.getTypedRuleContext(SampleParser.ElementAttributeContext,0)


        def Integer(self):
            return self.getToken(SampleParser.Integer, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_setAction




    def setAction(self):

        localctx = SampleParser.SetActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_setAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not(_la==SampleParser.T__16 or _la==SampleParser.T__17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 98
            self.elementAttribute()
            self.state = 99
            self.match(SampleParser.T__18)
            self.state = 100
            self.match(SampleParser.Integer)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EditActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceNLocation(self):
            return self.getTypedRuleContext(SampleParser.DeviceNLocationContext,0)


        def Integer(self):
            return self.getToken(SampleParser.Integer, 0)

        def elementAttribute(self):
            return self.getTypedRuleContext(SampleParser.ElementAttributeContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_editAction




    def editAction(self):

        localctx = SampleParser.EditActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_editAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__19) | (1 << SampleParser.T__20) | (1 << SampleParser.T__21) | (1 << SampleParser.T__22))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 103
            self.deviceNLocation()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__9 or _la==SampleParser.IDENTIFIER:
                self.state = 104
                self.elementAttribute()


            self.state = 107
            self.match(SampleParser.T__23)
            self.state = 108
            self.match(SampleParser.Integer)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objectAttribute(self):
            return self.getTypedRuleContext(SampleParser.ObjectAttributeContext,0)


        def location(self):
            return self.getTypedRuleContext(SampleParser.LocationContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_playAction




    def playAction(self):

        localctx = SampleParser.PlayActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_playAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==SampleParser.T__24 or _la==SampleParser.T__25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 111
            self.objectAttribute()
            self.state = 112
            self.location()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceNLocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def device(self):
            return self.getTypedRuleContext(SampleParser.DeviceContext,0)


        def location(self):
            return self.getTypedRuleContext(SampleParser.LocationContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_deviceNLocation




    def deviceNLocation(self):

        localctx = SampleParser.DeviceNLocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_deviceNLocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.device()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.Prepositions:
                self.state = 115
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.IDENTIFIER)
            else:
                return self.getToken(SampleParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return SampleParser.RULE_device




    def device(self):

        localctx = SampleParser.DeviceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_device)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__9:
                self.state = 118
                self.match(SampleParser.T__9)


            self.state = 122 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 121
                    self.match(SampleParser.IDENTIFIER)

                else:
                    raise NoViableAltException(self)
                self.state = 124 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Prepositions(self):
            return self.getToken(SampleParser.Prepositions, 0)

        def IDENTIFIER(self):
            return self.getToken(SampleParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_location




    def location(self):

        localctx = SampleParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_location)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SampleParser.Prepositions)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__9:
                self.state = 127
                self.match(SampleParser.T__9)


            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__26) | (1 << SampleParser.T__27) | (1 << SampleParser.T__28) | (1 << SampleParser.T__29) | (1 << SampleParser.T__30) | (1 << SampleParser.T__31))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 131
            self.match(SampleParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





